--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.flansec.spektrumapp"
-    android:versionCode="1"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:versionCode="2"
     android:versionName="1.0">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission tools:node="remove" android:name="android.permission.READ_PHONE_STATE" />
 
     <application
       android:name=".MainApplication"
